--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.4",
-    "@angular/cdk": "^11.0.2",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.4",
     "@angular/material": "^11.0.2",
     "@angular/platform-browser": "~11.0.4",
